--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /* Trees Image - Pexels: https://www.pexels.com/photo/photo-of-trees-in-forest-3801030/ */
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@200&display=swap');
 
+/* Mobile content editable Functionality */
+
 * {
   -webkit-user-select: none;
   user-select: none;
