--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ html {
 
 body {
   margin: 0;
-  background: url("./sea.jpg");
+  background: url("./ingredients.jpeg");
   background-size: cover;
   background-position: 50% 60%;
   background-attachment: fixed;
